openshift/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: moj-search-api
  namespace: milvus
spec:
  replicas: 3
  selector:
    matchLabels:
      app: moj-search-api
  template:
    metadata:
      labels:
        app: moj-search-api
    spec:
      containers:
      - name: api
        image: 'image-registry.openshift-image-registry.svc:5000/milvus/moj-search-api:latest'
        ports:
        - containerPort: 8080
        command: ["fastapi"]
        args: ["run", "--host", "0.0.0.0", "--port", "8080", "-e", "moj-search.main:app"]
        livenessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 30
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: moj-search-api
  namespace: milvus
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: moj-search-api
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: moj-search-api
  namespace: milvus
spec:
  to:
    kind: Service
    name: moj-search-api
    weight: 100
  port:
    targetPort: 8080
  wildcardPolicy: None
